--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -7,8 +7,39 @@
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
   width: 60%;
-  left: 50%;
-  transform: translate(-50%);
+  left: 53%;
+  margin-top: 96px;
+  transform: translate(-53%);
+}
+
+.listCard {
+  position: absolute;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
+    segoe ui, arial, sans-serif;
+  top: 50%;
+  left: 20%;
+  transform: translate(0, -45%);
+  overflow: hidden;
+}
+
+.listCard > div {
+  position: absolute;
+  will-change: transform, width, height, opacity;
+  padding: 24px;
+}
+
+.listCard > div > div {
+  position: relative;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  text-transform: uppercase;
+  font-size: 10px;
+  line-height: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.2);
 }
 
 .list > div {
@@ -28,7 +59,7 @@
   font-size: 10px;
   line-height: 10px;
   border-radius: 10px;
-  box-shadow: 0px 10px 50px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.2);
 }
 
 .card {
@@ -36,13 +67,11 @@
   height: 45ch;
   border-radius: 5px;
   background-position: center center;
-  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 0.5s;
-  will-change: transform;
 }
 
 .card:hover {
-  box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+  transition: transform 1.5s;
+  transform: scale(1.1);
 }
 
 .dot {
@@ -91,4 +120,48 @@
   z-index: -1;
   box-shadow: 0 0 11px rgba(33, 33, 33, 0.4);
   border: rgb(107, 115, 112) !important;
+}
+
+.button {
+  cursor: pointer;
+  margin: 16px;
+}
+
+.button :hover {
+  transform: scale(1.2);
+  transition: transform 0.6s;
+}
+
+.icon {
+  transition: transform 0.3s, box-shadow 0.3s;
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.icon :hover {
+  transform: scale(1);
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
+
+.arrow {
+  margin: 16px;
+  transition: transform 0.3s, box-shadow 0.3s;
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.arrow :hover {
+  transform: scale(1);
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
+
+.seperator :active {
+  animation: spin 2s 1;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
