--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -3,7 +3,6 @@
 }
 
 .list {
-  position: absolute;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
   width: 60%;
@@ -13,12 +12,11 @@
 }
 
 .listCard {
-  position: absolute;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
   top: 50%;
   left: 20%;
-  transform: translate(0, -45%);
+  transform: translate(0, 15%);
   overflow: hidden;
 }
 
@@ -70,8 +68,7 @@
 }
 
 .card:hover {
-  transition: transform 1.5s;
-  transform: scale(1.1);
+  transition: transform 1s;
 }
 
 .dot {
@@ -154,14 +151,26 @@
 }
 
 .seperator :active {
-  animation: spin 2s 1;
+
+  animation: spin 0.6s 1;
 }
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.2);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(360deg) scale(1);
   }
+}
+
+.details {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
