--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -151,7 +151,6 @@
 }
 
 .seperator :active {
-
   animation: spin 0.6s 1;
 }
 
@@ -173,4 +172,31 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.homeIcon {
+  position: absolute;
+  border-radius: 5px;
+  box-shadow: 0 9px 12px 1px rgba(0,0,0,0.14), 0 3px 16px 2px rgba(0,0,0,0.12), 0 5px 6px -3px rgba(0,0,0,0.20);
+  top: 50%;
+  left: 50%;
+}
+
+.homeIcon button{
+  transition: transform 1s;
+}
+
+.homeIcon button:hover {
+  transform: scale(1.4);
+  box-shadow: rgba(0, 0, 0, 0.14) 0px 9px 12px 1px, rgba(0, 0, 0, 0.12) 0px 3px 16px 2px, rgba(0, 0, 0, 0.2) 0px 5px 6px -3px;
+}
+
+.homeContainer {
+  width: 100vw !important;
+  height: 100vh !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  overflow: hidden;
 }
