--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -197,6 +197,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   overflow: hidden;
 }
