--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -7,15 +7,15 @@
     segoe ui, arial, sans-serif;
   width: 60%;
   left: 53%;
-  margin-top: 96px;
+  margin-top: 2rem;
   transform: translate(-53%);
 }
 
 .listCard {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
-  left: 20%;
-  transform: translate(0, 15%);
+  margin-right: auto;
+  margin-left: auto;
   overflow: hidden;
 }
 
@@ -35,7 +35,7 @@
   text-transform: uppercase;
   font-size: 10px;
   line-height: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.2);
 }
 
@@ -72,9 +72,8 @@
 
 .dot {
   margin: 0 !important;
-  background-color: rgb(107, 115, 112) !important;
-  border-color: rgb(107, 115, 112) !important;
   transition: transform 0.4s;
+  border: 1px solid rgba(0, 0, 0, 0);
 }
 
 .dot :hover {
@@ -82,7 +81,6 @@
 }
 
 .spinAni {
-  animation: spin 0.9s 1;
 }
 
 @keyframes spin {
@@ -97,6 +95,7 @@
 .seperator {
   transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
+  flex-direction: row !important;
 }
 
 .seperator :hover {
@@ -105,13 +104,13 @@
 }
 
 .connector {
-  background-color: rgb(107, 115, 112) !important;
+  background-color: rgba(179, 192, 202, 0.8) !important;
   transform: scale(1) !important;
   width: 5px !important;
 }
 
 .timelineButton {
-  color: rgb(234, 250, 240) !important;
+  color: rgb(7, 15, 58) !important;
   height: 100%;
   padding-left: 22px !important;
   width: 100%;
@@ -120,25 +119,22 @@
 }
 
 .timelineContentActive {
-  opacity: 1;
   height: 38px;
   padding: 0 !important;
-  transform: translate(-20px);
   border-radius: 5px;
-  background-color: rgb(107, 115, 112) !important;
   z-index: -1;
-  box-shadow: 0 0 11px rgba(33, 33, 33, 0.4);
-  border: rgb(107, 115, 112) !important;
 }
 
 .button {
   cursor: pointer;
   margin: 16px;
+  background-color: transparent;
 }
 
 .button :hover {
   transform: scale(1.2);
   transition: transform 0.6s;
+  background-color: transparent;
 }
 
 .icon {
@@ -173,25 +169,25 @@
 .homeIcon {
   position: absolute;
   border-radius: 5px;
-  box-shadow: 0 9px 12px 1px rgba(0,0,0,0.14), 0 3px 16px 2px rgba(0,0,0,0.12), 0 5px 6px -3px rgba(0,0,0,0.20);
+  box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12), 0 5px 6px -3px rgba(0, 0, 0, 0.2);
   top: 50%;
   left: 50%;
 }
 
-.homeIcon button{
+.homeIcon button {
   transition: transform 1s;
 }
 
 .homeIcon button:hover {
   transform: scale(1.4);
-  box-shadow: rgba(0, 0, 0, 0.14) 0px 9px 12px 1px, rgba(0, 0, 0, 0.12) 0px 3px 16px 2px, rgba(0, 0, 0, 0.2) 0px 5px 6px -3px;
+  box-shadow: rgba(0, 0, 0, 0.14) 0px 9px 12px 1px, rgba(0, 0, 0, 0.12) 0px 3px 16px 2px,
+    rgba(0, 0, 0, 0.2) 0px 5px 6px -3px;
 }
 
-.homeContainer {
-  width: 100vw !important;
-  height: 100vh !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+.navText {
+  color: rgba(33, 45, 71, 1);
+}
+
+.navText :hover {
+  color: rgba(33, 45, 71, 1);
 }
