--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -80,15 +80,6 @@
   transform: scale(1.2);
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg) scale(1);
-  }
-  100% {
-    transform: rotate(360deg) scale(1);
-  }
-}
-
 .seperator {
   transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
@@ -208,4 +199,27 @@
 .stepscardAnimation-exit-active {
   transform: translateY(0%) scale(0);
   transition: all 500ms ease-in-out;
+}
+
+.canvas {
+  /* animation: spin 4s infinite */
+  transform: rotate3d(1, 0 , 0, 60deg)
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate3d(0, 0, 0, 60deg) scaleX(-1);
+  }
+  25% {
+    transform: rotate3d(1, 0 , 60deg) scaleX(-1);
+  }
+  50% {
+    transform: rotate3d(0, 0 , 60deg) scaleX(-1);
+  }
+  75% {
+    transform: rotate3d(-1, 0 , 60deg) scaleX(-1);
+  }
+  100% {
+    transform: rotate3d(0, 0 , 60deg) scaleX(-1);
+  }
 }
