--- a/src/Styles/resumeStyle.css
+++ b/src/Styles/resumeStyle.css
@@ -2,6 +2,95 @@
   box-sizing: border-box;
 }
 
+.nav-container:hover #navbar {
+  transform: translateY(0);
+}
+
+.bounce {
+  cursor: pointer;
+  animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  -moz-animation: bounce 2s infinite;
+  -o-animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: rotate(90deg) translateX(0);
+  }
+  40% {
+    -webkit-transform: rotate(90deg) translateX(-10px);
+  }
+  60% {
+    -webkit-transform: rotate(90deg) translateX(-5px);
+  }
+}
+
+@-moz-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: rotate(90deg) translateX(0);
+  }
+  40% {
+    -moz-transform: rotate(90deg) translateX(-10px);
+  }
+  60% {
+    -moz-transform: rotate(90deg) translateX(-5px);
+  }
+}
+
+@-o-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -o-transform: rotate(90deg) translateX(0);
+  }
+  40% {
+    -o-transform: rotate(90deg) translateX(-10px);
+  }
+  60% {
+    -o-transform: rotate(90deg) translateX(-5px);
+  }
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: rotate(90deg) translateX(0);
+  }
+  40% {
+    transform: rotate(90deg) translateX(-10px);
+  }
+  60% {
+    transform: rotate(90deg) translateX(-5px);
+  }
+}
+
+#navbar {
+  display: flex;
+  background-color: black;
+  transform: translateY(-100%);
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+#navbar a {
+  color: white;
+  text-decoration: none;
+}
+#navbar > * {
+  padding: 1rem;
+}
+
 .list {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
@@ -19,7 +108,6 @@
 .listCard > div {
   position: absolute;
   will-change: transform, width, height, opacity;
-  padding: 24px;
 }
 
 .listCard > div > div {
@@ -32,14 +120,11 @@
   text-transform: uppercase;
   font-size: 10px;
   line-height: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.2);
 }
 
 .list > div {
   position: absolute;
   will-change: transform, width, height, opacity;
-  padding: 24px;
 }
 
 .list > div > div {
@@ -49,17 +134,15 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  text-transform: uppercase;
   font-size: 10px;
   line-height: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.2);
 }
 
 .card {
   width: 45ch;
   height: 45ch;
-  border-radius: 8px;
+  border-radius: 0px !important;
+  border: 0px !important;
   background-position: center center;
 }
 
@@ -105,13 +188,12 @@
 .timelineContentActive {
   height: 38px;
   padding: 0 !important;
-  border-radius: 5px;
   z-index: -1;
 }
 
 .button {
   cursor: pointer;
-  margin: 16px;
+  margin: 8px;
   background-color: transparent;
 }
 
@@ -152,7 +234,6 @@
 
 .homeIcon {
   position: absolute;
-  border-radius: 5px;
   box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12), 0 5px 6px -3px rgba(0, 0, 0, 0.2);
   top: 50%;
   left: 50%;
@@ -200,7 +281,7 @@
 
 .canvas {
   /* animation: spin 4s infinite */
-  transform: rotate3d(1, 0 , 0, 60deg)
+  transform: rotate3d(1, 0, 0, 60deg);
 }
 
 @keyframes spin {
@@ -208,15 +289,15 @@
     transform: rotate3d(0, 0, 0, 60deg) scaleX(-1);
   }
   25% {
-    transform: rotate3d(1, 0 , 60deg) scaleX(-1);
+    transform: rotate3d(1, 0, 60deg) scaleX(-1);
   }
   50% {
-    transform: rotate3d(0, 0 , 60deg) scaleX(-1);
+    transform: rotate3d(0, 0, 60deg) scaleX(-1);
   }
   75% {
-    transform: rotate3d(-1, 0 , 60deg) scaleX(-1);
+    transform: rotate3d(-1, 0, 60deg) scaleX(-1);
   }
   100% {
-    transform: rotate3d(0, 0 , 60deg) scaleX(-1);
+    transform: rotate3d(0, 0, 60deg) scaleX(-1);
   }
 }
